ghost-blog/templates/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5.111.0
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-storage
              mountPath: /var/lib/ghost/content
      volumes:
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-pvc
